--- a/CommandService/CommandService/CommandService.csproj
+++ b/CommandService/CommandService/CommandService.csproj
@@ -17,6 +17,9 @@
     <None Remove="Service\**" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Grpc.Net.Client" Version="2.67.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="7.2.0" />
     <Protobuf Include="Protos\DllService.proto" GrpcServices="Client" />
     <PackageReference Include="Google.Protobuf" Version="3.29.3" />
     <PackageReference Include="Grpc.Net.ClientFactory" Version="2.67.0" />
@@ -29,7 +32,6 @@
 
   <ItemGroup>
     <Folder Include="Data\" />
-    <Folder Include="Controller\" />
   </ItemGroup>
 
 </Project>
