--- a/DllService/DllService.Tests/DllService.Tests.csproj
+++ b/DllService/DllService.Tests/DllService.Tests.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="NUnit" Version="4.3.2" />
     <PackageReference Include="NUnit.Analyzers" Version="4.3.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.6.0" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.9.0" />
   </ItemGroup>
 
   <ItemGroup>
