--- a/SciTaipeiToolClient/.env.development
+++ b/SciTaipeiToolClient/.env.development
@@ -1,3 +1,2 @@
 # 環境變數（開發環境）
-# REACT_APP_API_BASE_URL=http://localhost:4795/api/v1
-REACT_APP_API_BASE_URL=http://pmsap:4795/api/v1
+REACT_APP_API_BASE_URL=http://localhost:4795/api/v1
