--- a/ScriptPilot/config/systemparameter.dev.yaml
+++ b/ScriptPilot/config/systemparameter.dev.yaml
@@ -1,3 +1,3 @@
-FactoryID: PH1_PMS
-ScriptRootPath: C:\\Git\\SciMisTool
-TcpPort: 4965
+FactoryID: HZG_PMS
+ScriptRootPath: D:\ServiceApplication\ScriptPilot\ScriptRootPath
+TcpPort: 4695
