主要功能完成

--- a/FtyBiProducer/config/config.yaml
+++ b/FtyBiProducer/config/config.yaml
@@ -13,6 +13,11 @@ mq:
   ca_cert_file: "certs/ca.crt"
   # 連線逾時 (字串)，程式裡用 time.ParseDuration 解析
   timeout:      "30s"
+  dead_letter_exchange: "ddldml_dlx_exchange"
+  dead_letter_queue: "ddl_dml_dead_queue"
+  dead_letter_routing_key: "dead_ddldml"
+  primary_exchange: "bi_direct"
+  primaryqueue: "ddl_dml_main_queue"
 
 db:
   host:      "testing"
@@ -28,3 +33,6 @@ db:
   encrypt:      "disable"
   # 連線逾時 (字串)，程式裡用 time.ParseDuration 解析
   timeout:      "60s"
+
+prometheus:
+  metrics_port: 2112
