--- a/TpeBiConsumer/config/config.yaml
+++ b/TpeBiConsumer/config/config.yaml
@@ -14,6 +14,11 @@ mq:
   ca_cert_file: "certs/ca.crt"
   # 連線逾時 (字串)，程式裡用 time.ParseDuration 解析
   timeout:      "5s"
+  dead_letter_exchange: "ddldml_dlx_exchange"
+  dead_letter_queue: "ddl_dml_dead_queue"
+  dead_letter_routing_key: "dead_ddldml"
+  primary_exchange: "bi_direct"
+  primaryqueue: "ddl_dml_main_queue"
 
 db:
   host:      "testing"
