Add configurable ports and timeouts

--- a/FtyBiProducer/config/config.yaml
+++ b/FtyBiProducer/config/config.yaml
@@ -13,6 +13,7 @@ mq:
   ca_cert_file: "certs/ca.crt"
   # 連線逾時 (字串)，程式裡用 time.ParseDuration 解析
   timeout:      "30s"
+  confirm_timeout: "10s"
   dead_letter_exchange: "ddldml_dlx_exchange"
   dead_letter_queue: "ddl_dml_dead_queue"
   dead_letter_routing_key: "dead_ddldml"
@@ -33,6 +34,7 @@ db:
   encrypt:      "disable"
   # 連線逾時 (字串)，程式裡用 time.ParseDuration 解析
   timeout:      "60s"
+  query_timeout: "30s"
 
 prometheus:
   metrics_port: 2112
