--- a/TpeBiConsumer/config/config.yaml
+++ b/TpeBiConsumer/config/config.yaml
@@ -1,6 +1,10 @@
 process_ddl_interval: "15s"    # 每 5 分鐘執行一次DDL批次處理
 process_dml_interval: "1h"    # 每 1 小時小時執行一次DML批次處理
 process_timeout: "1m"    # 單次批次處理timeout 為30秒
+consumer_count: 10
+
+prometheus:
+  metrics_port: 2113
 log_file_name: "1m"    # 單次批次處理timeout 為30秒
 
 mq:
