程式碼整理

--- a/FtyBiProducer/config/config.yaml
+++ b/FtyBiProducer/config/config.yaml
@@ -2,11 +2,12 @@ process_ddl_interval: "15s"    # 每 5 分鐘執行一次DDL批次處理
 process_dml_interval: "1s"    # 每 1 小時小時執行一次DML批次處理
 process_timeout: "30s"    # 單次批次處理timeout 為30秒
 
+prometheus:
+  metrics_port: 2112 # metrics 暴露 port
+
 mq:
   # RabbitMQ 連線 URL（含使用 TLS 時的 amqps）
   amqp_url:     "amqps://root:admin1234@localhost:5671/"
-  # Exchange 名稱
-  exchange:     "global_direct"
   # TLS 憑證檔案路徑
   cert_file:    "certs/PmsApClient.crt"
   key_file:     "certs/PmsApClient.key"
@@ -23,8 +24,8 @@ mq:
 db:
   host:      "testing"
   instance:  "PH1"
-  # SQL Server 連接埠 (預設 1433)
-  port:         1433
+  # SQL Server 連接埠 (如有需要)
+  # port:         1433
   # 登入帳號、密碼
   user:         "SCIMIS"
   password:     "27128299"
@@ -35,6 +36,3 @@ db:
   # 連線逾時 (字串)，程式裡用 time.ParseDuration 解析
   timeout:      "60s"
   query_timeout: "30s"
-
-prometheus:
-  metrics_port: 2112
