--- a/TpeBiConsumer/config/config.yaml
+++ b/TpeBiConsumer/config/config.yaml
@@ -1,17 +1,14 @@
 process_ddl_interval: "15s"    # 每 5 分鐘執行一次DDL批次處理
 process_dml_interval: "1h"    # 每 1 小時小時執行一次DML批次處理
 process_timeout: "1m"    # 單次批次處理timeout 為30秒
-consumer_count: 10
+consumer_count: 10 # consumer數量
 
 prometheus:
-  metrics_port: 2113
-log_file_name: "1m"    # 單次批次處理timeout 為30秒
+  metrics_port: 2113 # metrics 暴露 port
 
 mq:
   # RabbitMQ 連線 URL（含使用 TLS 時的 amqps）
   amqp_url:     "amqps://root:admin1234@localhost:5671/"
-  # Exchange 名稱
-  exchange:     "global_direct"
   # TLS 憑證檔案路徑
   cert_file:    "certs/PmsApClient.crt"
   key_file:     "certs/PmsApClient.key"
@@ -27,8 +24,8 @@ mq:
 db:
   host:      "testing"
   instance:  "PMS"
-  # SQL Server 連接埠 (預設 1433)
-  port:         1433
+  # SQL Server 連接埠 (如有需要)
+  # port:         1433
   # 登入帳號、密碼
   user:         "SCIMIS"
   password:     "27128299"
