根據服務定義Log名稱，以及相關參數

--- a/ScriptPilot/config/systemparameter.dev.yaml
+++ b/ScriptPilot/config/systemparameter.dev.yaml
@@ -2,4 +2,4 @@ FactoryID: HZG_PMS
 ScriptRootPath: D:\ServiceApplication\ScriptPilot\ScriptRootPath
 TcpPort: 4695
 ServiceLogPaths:
-  FtyBitoTpe: "C:\\Git\\SciMisTool\\FtyBiProducer\\logs"
+  FtyBiProducer: "C:\\Git\\SciMisTool\\FtyBiProducer\\logs\\FtyBiProducer-"
