--- a/ScriptPilot/config/systemparameter.prod.yaml
+++ b/ScriptPilot/config/systemparameter.prod.yaml
@@ -2,4 +2,4 @@ FactoryID: HZG_PMS
 ScriptRootPath: D:\ServiceApplication\ScriptPilot\ScriptRootPath
 TcpPort: 4695
 ServiceLogPaths:
-  FtyBitoTpe: "C:\\Git\\SciMisTool\\FtyBiProducer\\logs"
+  FtyBiProducer: "C:\\Git\\SciMisTool\\FtyBiProducer\\logs\\FtyBiProducer-"
