--- a/SciTaipeiToolClient/.env.development
+++ b/SciTaipeiToolClient/.env.development
@@ -1,2 +1,4 @@
 # 環境變數（開發環境）
 REACT_APP_API_BASE_URL=http://localhost:4795/api/v1
+REACT_APP_FACTORY_IDS=PH1_PMS,PH1_MES
+REACT_APP_SERVICE_NAMES=FtyBiProducer
