--- a/FtyBiProducer/config/config.dev.yaml
+++ b/FtyBiProducer/config/config.dev.yaml
@@ -15,11 +15,11 @@ mq:
   # 連線逾時 (字串)，程式裡用 time.ParseDuration 解析
   timeout:      "30s"
   confirm_timeout: "10s"
-  dead_letter_exchange: "ddldml_dlx_exchange_test"
+  dead_letter_exchange: "bi_dlx_exchange_test"
   dead_letter_queue: "ddl_dml_dead_queue_test"
   dead_letter_routing_key: "dead_ddldml_test"
-  primary_exchange: "bi_direct_test"
-  primaryqueue: "ddl_dml_main_queue_test"
+  primary_exchange: "bi_main_exchange_test"
+  primary_queue: "ddl_dml_main_queue_test"
 
 db:
   host:      "testing"
