--- a/FtyBiProducer/config/config.dev.yaml
+++ b/FtyBiProducer/config/config.dev.yaml
@@ -1,5 +1,5 @@
-process_ddl_interval: "15s"    # 每 5 分鐘執行一次DDL批次處理
-process_dml_interval: "1s"    # 每 1 小時小時執行一次DML批次處理
+process_ddl_interval: "60s"    # 每 1 分鐘執行一次DDL批次處理
+process_dml_interval: "600s"   # 每 10 分鐘執行一次DML批次處理
 process_timeout: "30s"    # 單次批次處理timeout 為30秒
 
 prometheus:
