--- a/FtyBiProducer/config/config.dev.yaml
+++ b/FtyBiProducer/config/config.dev.yaml
@@ -1,7 +1,7 @@
-process_ddl_interval: "60s"    # 每 1 分鐘執行一次DDL批次處理
-process_dml_interval: "600s"   # 每 10 分鐘執行一次DML批次處理
+process_ddl_interval: "60s"    # 執行一次DDL批次處理 的間間隔
+process_dml_interval: "1s"   # 執行一次DML批次處理 的間間隔
 process_timeout: "30s"    # 單次批次處理timeout 為30秒
-dml_log_generate_interval: "3m"
+dml_log_generate_interval: "10s" # 寫入 Dml_log 時間間隔
 
 prometheus:
   metrics_port: 2112 # metrics 暴露 port
@@ -24,7 +24,7 @@ mq:
 
 db:
   host:      "testing"
-  instance:  "SPR"
+  instance:  "PH1"
   # SQL Server 連接埠 (如有需要)
   # port:         1433
   # 登入帳號、密碼
